# simple-os

./: .gitignore  CMakeLists.txt  README.md  linker.ld
include/: uart.h
src/: boot.S  main.c  uart.c  uart.h
src/kernel/: aarch64.h  fat.c  fat.h  kernel.ld  main.c  memlayout.h  mm.c  mm.h  proc.c  proc.h  switch.S  types.h  uart.c  uart.h  virtio_blk.c  virtio_blk.h
